feat(scheduler): add task events for start, completion, and failure

--- a/FileUtilityApp_Test/FileUtilityApp_Test.csproj
+++ b/FileUtilityApp_Test/FileUtilityApp_Test.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FileSchedulerLib\FileSchedulerLib.csproj" />
     <ProjectReference Include="..\FileUtilityLib\FileUtilityLib.csproj" />
   </ItemGroup>
 
