feat: Add date-based folder organization for file copies
- Add OrganizeByDate and DateFolderFormat properties to FileCopyTask
- Implement OrganizeByDateFolder() and DisableDateOrganization() extension methods
- Modify FileCopyService to create date-based subdirectories when enabled
- Support customizable date formats (dd-MM-yyyy, yyyy-MM-dd, etc.)
- Maintain backward compatibility with existing tasks

--- a/FileUtilityLib/FileUtilityLib.csproj
+++ b/FileUtilityLib/FileUtilityLib.csproj
@@ -26,6 +26,7 @@
     <DefineConstants Condition="'$(TargetFramework)' == 'net6.0'">NET6_0_OR_GREATER</DefineConstants>
     <DefineConstants Condition="'$(TargetFramework)' == 'net7.0'">NET7_0_OR_GREATER</DefineConstants>
     <DefineConstants Condition="'$(TargetFramework)' == 'net8.0'">NET8_0_OR_GREATER</DefineConstants>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     
   </PropertyGroup>
 
